bk_ida/gccida/g1/print_mem_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_mem_expr/src/print-rtl.c:551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_mem_expr/src/print-rtl.c:571:19: error: use of undeclared identifier 'off_661611'
fprintf( outfile, off_661611, name->int_cst.int_cst.low); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_mem_expr/src/print-rtl.c:579:10: error: use of undeclared identifier 'unk_6E1B77'
fwrite( &unk_6E1B77, 1uLL, 0xCuLL, outfile); 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_mem_expr/src/obj/print-rtl.o] Error 1
